--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "xml-prompter",
+  "name": "promptcraft-ai",
   "version": "1.0.0",
-  "description": "A modern web application for generating XML prompts for Claude Sonnet",
+  "description": "Universal AI Prompt Optimizer - Create optimized prompts for any AI model with intelligent format adaptation",
   "type": "module",
   "private": true,
   "scripts": {
