--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@google/generative-ai": "^0.2.1",
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "bull": "^4.12.2",
     "compression": "^1.7.4",
