--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "dotenv": "^16.5.0",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
