--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.263.1",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.3"
