fix(ci): typecheck errors — add vite types, use import.meta as any, switch msw import, and tighten types in hooks/mocks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,14 @@
     "module": "ESNext",
     "jsx": "react-jsx",
     "moduleResolution": "Bundler",
+    "lib": ["ES2020", "DOM"],
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "baseUrl": ".",
+    "types": ["vite/client"],
     "paths": {
       "@api/*": ["src/lib/api/*"],
       "@features/*": ["src/features/*"],
