--- a/package.json
+++ b/package.json
@@ -34,24 +34,27 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.50.0",
-    "dotenv": "^16.5.0",
-    "lucide-react": "^0.263.1",
-    "qrcode": "^1.5.4",
+    "@tanstack/react-query": "^5.51.21",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
+    "lucide-react": "^0.263.1",
     "msw": "^2.4.6",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.3",
-    "@tanstack/react-query": "^5.51.21",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
@@ -64,9 +67,6 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.5.4",
     "vite": "^4.4.5",
-    "vitest": "^1.6.0",
-    "@testing-library/react": "^14.3.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@testing-library/jest-dom": "^6.4.6"
+    "vitest": "^1.6.0"
   }
 }
